# wordfun

./: .dockerignore  .eslintrc.js  .gitignore  .postcssrc  .proxyrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: publish-docker.yml  tests.yml
api/: .ignore  Cargo.toml
api/data/: LICENSE.ukacd18  README.md  extra-words
api/proptest-regressions/: preview.txt
api/proptest-regressions/lexicon/: entry.txt
api/src/: api-index.html  ascii_string.rs  dictionary.rs  lexicon.rs  lib.rs  main.rs  plural.rs  popularity.rs  reference.rs  sorted_ascii.rs  thesaurus.rs  web.rs  word_breaks.rs  wordnet.rs
api/src/lexicon/: entry.rs  parse_word.rs  results.rs  search.rs  search_key.rs
api/src/web/: preview.rs  refdata.rs
api/src/wordnet/: stemming.rs
api/src/wordnet/import/: sense.rs
data/: README.md
public/: index.html  manifest.json
src/: app.css  ascii_string.rs  check-version.ts  footer.tsx  fullresults.tsx  index.tsx  inflections.ts  intro.tsx  isblank.ts  lexicon.rs  main.rs  preview.rs  preview.ts  reference.rs  sentry.ts  thesaurus.rs  word_breaks.rs  wordfun.tsx
src/lexicon/: entry.rs  parse_word.rs  search.rs
src/wordnet/: import.rs  word_type.rs
src/wordnet/data/: README.md
src/wordnet/import/: data.rs
web/: app.css  check-version.js  index.html  index.js  isblank.js  reset.css  sentry.js  thesaurus.js  wordfun.js
