[package]
name = "wordfun"
version = "1.0.0"
authors = ["Pete Bevin <pete@petebevin.com>"]
edition = "2018"
license = "MIT"
publish = false

[[bin]]
name = "wordfun"
path = "src/main.rs"
bench = false

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
listenfd = "0.3.3"
deunicode = "1.1.1"
fixedbitset = "0.3.1"
actix-files = "0.2.2"
log = "0.4.11"
env_logger = "0.7.1"
itertools = "0.9.0"
smallvec = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
anyhow = "1.0.32"
structopt = "0.3.17"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
proptest = "0.10.1"
phf_codegen = "0.8.0"
